--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 			font-family: sans-serif;
 		}
 		a{
+			max-width: 500px;
 			padding: 5px 15px;
 			background: green;
 			text-decoration: none;
-			display:block;
+			display:  block;
+			text-align: center;
+			border: 5px solid #000;
 			color: #fff;
 			font-size: 25px;
 		}
