--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<h1>Abode InDesign 2020</h1>
-	<a href="https://disk.yandex.com/d/m3D1GGMoOp8iwA">Կտցրա ստեղ, որ տանի Yandex </a>
+	<a href="https://disk.yandex.com/d/m3D1GGMoOp8iwA">Կտցրա ստեղ, որ տանի Yandex Disk</a>
 	<p>Yandex դիսկից կքաշեք ZIP-ը , որի մեջ արդեն  քաշած ա InDesign-ը։ Բացեք ZIP-ը , քցեք C: կամ D: դիսկի մեջ , հետո մտեք Abode InDesign 2020 պապկեն , իջեք ներքև սխմեք վրեն ու կբացի</p>
 	<img src="a1.png" alt="">
 
